--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Jessica Nolte</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
 </head>
 
 <body>
@@ -51,7 +51,7 @@
                 <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded">
             </div>
         </div>
-        <div id="contact" class="my-5">
+        <div id="contact" class="my-4">
             <h2 class="text-center">📮 Contact me</h2>
             <a href="mailto:nolte.jessicac@gmail.com" class="email-link">
         Nolte.JessicaC@gmail.com
