--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jessica Nolte</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
@@ -38,49 +38,49 @@
     <h1 class="text-center">Jessica Nolte</h1>
     <h3 class="text-center">🇺🇸 Front-end developer, based in USA</h3>
     <div class="navigation-links mb-5">
-        <a href="about.html#contact" class="contact-link">Contact me</a>
-        <a href="about.html" class="about-link">About me</a>
+        <a href="about.html#contact" class="links primary-link">Contact me</a>
+        <a href="about.html" class="links about-link">About me</a>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 d-none d-sm-block">
                 <img src="images/yoga.png" class="img-fluid rounded" />
             </div>
-            <div class="col-6">
+            <div class="col-sm-6 col-12">
                 <h2 class="mb-3">Yoga App</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
                 </p>
                 <div class="mt-5">
-                    <a href="#" class="primary-link">Launch Yoga App</a>
+                    <a href="#" class="links primary-link">Launch Yoga App</a>
                 </div>
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-6">
+            <div class="col-sm-6 col-12">
                 <h2 class="mb-3">Weather App</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
                 </p>
                 <div class="mt-5">
-                    <a href="#" class="primary-link">Launch Weather App</a>
+                    <a href="#" class="links primary-link">Launch Weather App</a>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 d-none d-sm-block">
                 <img src="images/weather.png" class="img-fluid rounded" />
             </div>
         </div>
-        <div class="row mt-5">
-            <div class="col-6">
+        <div class="row my-5">
+            <div class="col-6 d-none d-sm-block">
                 <img src="images/yogurt.png" class="img-fluid rounded" />
             </div>
-            <div class="col-6">
+            <div class="col-sm-6 col-12">
                 <h2 class="mb-3">Yogurt App</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
                 </p>
                 <div class="my-5">
-                    <a href="#" class="primary-link">Launch Yogurt App</a>
+                    <a href="#" class="links primary-link">Launch Yogurt App</a>
                 </div>
             </div>
         </div>
