--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Jessica Nolte</title>
+    <meta name="description" content="All about Jessica Nolte, a Front-end Developer based in the USA">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="/styles/styles.css" />
 </head>
@@ -13,20 +14,20 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Jessica Nolte</a>
+            <a class="navbar-brand" href="index.html" target="Homepage">Jessica Nolte</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html" target="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About Me</a>
+                        <a class="nav-link active" href="about.html" target="About Jessica Nolte">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact">Contact Me</a>
+                        <a class="nav-link" href="about.html#contact" target="Contact Jessica Nolte">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -42,18 +43,18 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
-                <img src="images/yoga.png" class="img-fluid p-2 shadow rounded">
+                <img src="images/yoga.png" alt="Yoga standing pose" class="img-fluid p-2 shadow rounded">
             </div>
             <div class="col-sm-4">
-                <img src="images/weather.png" class="img-fluid p-2 shadow rounded">
+                <img src="images/weather.png" alt="Weather forecast" class="img-fluid p-2 shadow rounded">
             </div>
             <div class="col-sm-4">
-                <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded">
+                <img src="images/yogurt.png" alt="Yogurt with blueberries" class="img-fluid p-2 shadow rounded">
             </div>
         </div>
         <div id="contact" class="my-4">
             <h2 class="text-center">📮 Contact me</h2>
-            <a href="mailto:nolte.jessicac@gmail.com" class="email-link">
+            <a href="mailto:nolte.jessicac@gmail.com" class="email-link" target="Email Jessica Nolte">
         Nolte.JessicaC@gmail.com
       </a>
         </div>
