--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jessica Nolte</title>
+    <title>Jessica Nolte - A Front-end Developer's display of her Apps</title>
+    <meta name="description" content="See the amazing Apps of Jessica Nolte" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="/styles/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -14,77 +15,131 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Jessica Nolte</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="index.html" target="Homepage">Jessica Nolte</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                target="Homepage"
+                >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact">Contact Me</a>
-                    </li>
-                </ul>
-            </div>
+              <a class="nav-link" href="about.html" target="About Jessica Nolte"
+                >About Me</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                target="Contact Jessica Nolte"
+                >Contact Me</a
+              >
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
     <h2 class="text-center">👋 Hi I am</h2>
     <h1 class="text-center">Jessica Nolte</h1>
     <h3 class="text-center">🇺🇸 Front-end developer, based in USA</h3>
     <div class="navigation-links mb-5">
-        <a href="about.html#contact" class="links primary-link">Contact me</a>
-        <a href="about.html" class="links about-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="links primary-link"
+        target="Contact Jessica Nolte"
+        >Contact me</a
+      >
+      <a href="about.html" class="links about-link" target="About Jessica Nolte"
+        >About me</a
+      >
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-6 d-none d-sm-block">
-                <img src="images/yoga.png" class="img-fluid rounded" />
-            </div>
-            <div class="col-sm-6 col-12">
-                <h2 class="mb-3">Yoga App</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-                </p>
-                <div class="mt-5">
-                    <a href="#" class="links primary-link">Launch Yoga App</a>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-6 d-none d-sm-block">
+          <img
+            src="images/yoga.png"
+            class="img-fluid rounded"
+            alt="Standing yoga pose"
+          />
         </div>
-        <div class="row mt-5">
-            <div class="col-sm-6 col-12">
-                <h2 class="mb-3">Weather App</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-                </p>
-                <div class="mt-5">
-                    <a href="#" class="links primary-link">Launch Weather App</a>
-                </div>
-            </div>
-            <div class="col-6 d-none d-sm-block">
-                <img src="images/weather.png" class="img-fluid rounded" />
-            </div>
+        <div class="col-sm-6 col-12">
+          <h2 class="mb-3">Yoga App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="links primary-link" target="Yoga page"
+              >Launch Yoga App</a
+            >
+          </div>
         </div>
-        <div class="row my-5">
-            <div class="col-6 d-none d-sm-block">
-                <img src="images/yogurt.png" class="img-fluid rounded" />
-            </div>
-            <div class="col-sm-6 col-12">
-                <h2 class="mb-3">Yogurt App</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-                </p>
-                <div class="my-5">
-                    <a href="#" class="links primary-link">Launch Yogurt App</a>
-                </div>
-            </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-sm-6 col-12">
+          <h2 class="mb-3">Weather App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="links primary-link" target="Weather page"
+              >Launch Weather App</a
+            >
+          </div>
         </div>
+        <div class="col-6 d-none d-sm-block">
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded"
+            alt="Current weather forecast"
+          />
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-6 d-none d-sm-block">
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded"
+            alt="Yogurt with blueberries"
+          />
+        </div>
+        <div class="col-sm-6 col-12">
+          <h2 class="mb-3">Yogurt App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="my-5">
+            <a href="#" class="links primary-link" target="Yogurt page"
+              >Launch Yogurt App</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
