added padding to about paragraph

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     </nav>
     <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer from Nooksack, USA</h3>
-    <div class="about-paragraphs text-center">
+    <div class="about-paragraphs text-center px-5">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
         </p>
