--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jessica Nolte - A Front-end Developer's display of her Apps</title>
-    <meta name="description" content="See the amazing Apps of Jessica Nolte" />
+    <meta name="description" content="Discover your current weather forecast and all about Yoga and yogurt from the amazing Apps of Jessica Nolte" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="canonical" href="https://lucid-franklin-dbabb9.netlify.app/index.html" />
